addons/auth/dex/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
  namespace: dex
  labels:
    sand.pit.im/addon: dex
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: sandpit
      namespace: istio-ingress
  hostnames:
    - dex.sand.pit.im
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dex
          namespace: dex
          port: 80
